--- a/client/src/css/game.css
+++ b/client/src/css/game.css
@@ -1,9 +1,21 @@
+.title {
+  position: relative;
+  font-size: 150%;
+  font-weight: bold;
+  text-align: center;
+  color: #4CAF50;
+  margin-top: -40px;
+}
+
 .board {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   width: 400px;
   height: 400px;
   border: 1px solid black;
+  margin: 60px auto 0;
 }
 
 .row {
@@ -24,4 +36,25 @@
 
 .selected {
   background-color: brown;
+}
+
+.messagesBox{
+  position: absolute;
+  top: 40%;
+  left: -30%;
+  transform: translate(-50%, -50%);
+  width: 30vh;
+  height: 20vh;
+  border-radius: 1em;
+  background-color: white;
+  box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+}
+
+.message{
+  text-align: center;
+}
+
+.icons{
+  text-align: center;
+  margin-top: -30px;
 }
