--- a/client/src/css/game.css
+++ b/client/src/css/game.css
@@ -58,3 +58,11 @@
   text-align: center;
   margin-top: -30px;
 }
+
+.readyBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -10px;
+}
