--- a/client/src/css/game.css
+++ b/client/src/css/game.css
@@ -14,7 +14,7 @@
   flex-wrap: wrap;
   width: 400px;
   height: 400px;
-  border: 1px solid black;
+  border: 1px solid wheat;
   margin: 60px auto 0;
 }
 
@@ -31,7 +31,7 @@
   width: 50px;
   height: 50px;
   font-size: 24px;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 
 .selected {
@@ -43,8 +43,8 @@
   top: 40%;
   left: -30%;
   transform: translate(-50%, -50%);
-  width: 30vh;
-  height: 20vh;
+  width: 35vh;
+  height: 25vh;
   border-radius: 1em;
   background-color: white;
   box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
@@ -70,8 +70,6 @@
   position: relative;
 }
 
-
-
 .image {
   width: 40px;
   height: 40px;
@@ -86,3 +84,14 @@
   top: 25px;
 }
 
+.cell:not(.light):hover , .cell:not(.dark):hover{
+  transform: scale(1.1);
+}
+
+.cell:not(.light) {
+  background-color: #7dc25a;
+}
+
+.cell:not(.dark) {
+  background-color: #d5deca;
+}
