show friends by email

--- a/client/src/css/FriendsPage.css
+++ b/client/src/css/FriendsPage.css
@@ -52,12 +52,33 @@
     text-align: center;
     color: #4CAF50;
     margin: 0.4em;
-    top: 2em;
+    top: 4.5em;
 }
 
 img {
     width: 25px;
     height: 20px;
+}
+
+.friends-list{
+    position: relative;
+    width: 20em;
+    top: 25%;
+    left: 15%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow-y: auto;
+    border-radius: 1em;
+    background-color: rgba(255, 255, 255, 0.38);
+    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+}
+
+.invite-button{
+    background-color: rgba(255, 255, 255, 0);
+    height: 20px;
+    white-space: nowrap;
+
 }
 
 .add-friend{
