--- a/client/src/css/game.css
+++ b/client/src/css/game.css
@@ -1,12 +1,3 @@
-.title {
-  position: relative;
-  font-size: 150%;
-  font-weight: bold;
-  text-align: center;
-  color: #4CAF50;
-  margin-top: -40px;
-}
-
 .board {
   display: flex;
   justify-content: center;
@@ -70,6 +61,22 @@
   position: relative;
   top: -10px;
 }
+
+.spinner {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 .image-container{
   position: relative;
 }
