--- a/client/src/css/game.css
+++ b/client/src/css/game.css
@@ -62,12 +62,27 @@
   top: -10px;
 }
 
+.spinner-div{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35vh;
+  height: 25vh;
+  border-radius: 1em;
+  background-color: white;
+  box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+}
+
 .spinner {
+  position: absolute;
+  top: 35%;
+  left: 30%;
   border: 16px solid #f3f3f3;
   border-top: 16px solid #3498db;
   border-radius: 50%;
-  width: 70px;
-  height: 70px;
+  width: 45px;
+  height: 45px;
   animation: spin 2s linear infinite;
 }
 
