--- a/client/src/css/FriendsPage.css
+++ b/client/src/css/FriendsPage.css
@@ -90,7 +90,7 @@ img {
     top: 40%;
     left: -35%;
     transform: translate(-50%, -50%);
-    width: 45vh;
+    width: 50vh;
     height: 30vh;
     border-radius: 1em;
     background-color: white;
@@ -111,15 +111,26 @@ img {
 }
 
 .game-invites {
+    overflow-y: auto;
     position: absolute;
     top: 40%;
     left: 140%;
     transform: translate(-50%, -50%);
-    width: 45vh;
+    width: 50vh;
     height: 30vh;
     border-radius: 1em;
     background-color: white;
     box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+}
+
+.clear {
+    border: none;
+    background: none;
+    padding: 0;
+}
+
+.game-buttons{
+display: flex;
 }
 
 .subtitle{
