--- a/client/src/css/game.css
+++ b/client/src/css/game.css
@@ -121,3 +121,37 @@
 .cell:not(.dark) {
   background-color: #d5deca;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.endgame{
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40vh;
+  height: 35vh;
+  border-radius: 1em;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.messageGame{
+  position: relative;
+  top: -10%;
+}
+.endgameBtn{
+  position: relative;
+  top: -10%;
+  margin-bottom: 0.5em;
+}
